--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,6 +21,11 @@ section {
     width: 1300px;
 }
 
+.container-900 {
+    width: 900px;
+    margin: 0 auto;
+}
+
 .container-1200 {
     margin: 0 auto;
     width: 1200px;
@@ -285,4 +290,54 @@ li {
     position: absolute;
     bottom: -110px;
     right: 60px;
+}
+
+.blue-line {
+    height: 4rem;
+    background-color: #0282f9;
+    position: relative;
+    top: -10px;
+}
+
+.img-container {
+    width: 150px;
+    height: 250px;
+    text-align: center;
+    position: absolute;
+    top: 90px;
+    left: 300px;
+    border: 1px solid white;
+    background-color: lightblue;
+}
+
+.img-details {
+    width: 100%;
+}
+
+.img-text {
+    color: white;
+    text-transform: uppercase;
+    font-size: .8rem;
+    height: 20px;
+}
+
+.main-details_middle {
+    padding-top: 100px;
+}
+
+.info-comic-left {
+    width: 65%;
+}
+
+.comic-price {
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    font-weight: bolder;
+}
+
+.price-info {
+    display: flex;
+    background-color: green;
+    padding: .5rem;
+    margin: 20px 0;
 }
