-completato anche se il css e la resa visiva non è uguale-

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,8 +8,12 @@ a {
   text-decoration: none;
 }
 
-section {
+.section-characters {
   margin: 40px 0;
+}
+
+.section-comic {
+  margin-bottom: 40px;
 }
 
 .active {
@@ -19,6 +23,11 @@ section {
 .container {
   margin: 0 auto;
   width: 1300px;
+}
+
+.container-800 {
+  width: 800px;
+  margin: 0 auto;
 }
 
 .container-900 {
@@ -474,4 +483,23 @@ h4 {
 
 .details-bottom_container {
   display: flex;
+  margin-top: 50px;
+  padding: 20px 0;
+}
+.details-bottom_container .item-detail {
+  width: calc(100% - 2.5px);
+  display: flex;
+  justify-content: center;
+  border: 1px solid gray;
+  padding: 20px 10px;
+}
+.details-bottom_container .item-detail h4 {
+  align-self: flex-start;
+  margin-right: 10px;
+  color: gray;
+  font-size: 0.8rem;
+}
+.details-bottom_container .item-detail img {
+  width: 20%;
+  margin-right: 20px;
 }
