--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -399,10 +399,13 @@ h4 {
 
 .details-bottom {
     background-color: lightgray;
+    border-top: 1px solid gray;
 }
 
 .details-top {
     display: flex;
+    justify-content: center;
+    margin-bottom: 90px;
 }
 
 .details-left {
@@ -484,13 +487,13 @@ h4 {
 
 .details-bottom_container {
     display: flex;
-    margin-top: 50px;
-    padding: 20px 0;
     .item-detail {
         width: calc(100% - 10px / 4);
         display: flex;
         justify-content: center;
-        border: 1px solid gray;
+        border-right: 1px solid gray;
+        border-left: 1px solid gray;
+        border-bottom: 1px solid gray;
         padding: 20px 10px;
         h4 {
             align-self: flex-start;
